# debian-gnome-vfs

./: ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  gnome-vfs-2.0.pc.in  gnome-vfs-module-2.0.pc.in  gnome-vfs-zip.in  gnome-vfs.spec  xdgmime.win32.diff
daemon/: Makefile.in  daemon-connection.c
debian/: changelog  control  control.in  libgnomevfs2-0.install  libgnomevfs2-common.install  libgnomevfs2-common.postrm  libgnomevfs2-common.prerm  libgnomevfs2-dev.install  libgnomevfs2-extra.install  rules  watch
devel-docs/: Makefile.in
doc/: Makefile.in  gnome-vfs-2.0-sections.txt
imported/: Makefile.in
libgnomevfs/: Makefile.am  Makefile.in  gnome-vfs-ace.c  gnome-vfs-address.c  gnome-vfs-async-job-map.c  gnome-vfs-async-ops.c  gnome-vfs-cancellable-ops.c  gnome-vfs-cancellation.c  gnome-vfs-configuration.h  gnome-vfs-daemon-method.c  gnome-vfs-directory.c  gnome-vfs-dns-sd.c  gnome-vfs-drive.c  gnome-vfs-enum-types.c  gnome-vfs-file-info.c  gnome-vfs-file-size.h.in  gnome-vfs-filesystem-type.c  gnome-vfs-hal-mounts.c  gnome-vfs-handle.c  gnome-vfs-inet-connection.c  gnome-vfs-init.c  gnome-vfs-job-queue.c  gnome-vfs-job-queue.h  gnome-vfs-job.c  gnome-vfs-job.h  gnome-vfs-method.c  gnome-vfs-mime-handlers.c  gnome-vfs-mime-magic.c  gnome-vfs-mime-magic.h  gnome-vfs-mime.c  gnome-vfs-module-callback-marshall.c  gnome-vfs-module-callback-private.h  gnome-vfs-module-callback.c  gnome-vfs-module-shared.c  gnome-vfs-open-fd.c  gnome-vfs-ops.c  gnome-vfs-parse-ls.c  gnome-vfs-pty.c  (+15 more)
(+224 files in other folders)
